--- a/style.css
+++ b/style.css
@@ -21,8 +21,11 @@
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
+    border-radius: 5px;
+    border: solid 1px;
 }
 #searchButton:hover {
-    background-color: #007BFF;
+    background-color: green;
     color: white;
+    border: solid 0px;
 }
